--- a/VSG.App/MainWindow.xaml
+++ b/VSG.App/MainWindow.xaml
@@ -4,9 +4,17 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VSG.App"
+        xmlns:viewmodel="clr-namespace:VSG.App.ViewModel" 
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
+   
+    <Grid Margin="10">
+        <TreeView Name="effectTree">
+            <TreeView.ItemTemplate>
+                <HierarchicalDataTemplate DataType="{x:Type viewmodel:EffectTreeViewModel}" ItemsSource="{Binding Items}">
+                    <TextBlock Text="{Binding Name}" />
+                </HierarchicalDataTemplate>
+            </TreeView.ItemTemplate>
+        </TreeView>
     </Grid>
 </Window>
