--- a/VSG.App/MainWindow.xaml
+++ b/VSG.App/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:VSG.App"
         xmlns:viewmodel="clr-namespace:VSG.App.ViewModels" 
         mc:Ignorable="d"
-        Title="MainWindow"  Background="LightGray"
+        Title="VSG"  Background="LightGray"
         MinWidth="800"
         MinHeight="600" Width="887"
         DataContext="{Binding RelativeSource={RelativeSource Self}}"
@@ -21,34 +21,39 @@
             <RowDefinition Height="32"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="1*"/>
             <ColumnDefinition Width="2*"/>
-            <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="3*"/>
         </Grid.ColumnDefinitions>
-        <Label Margin="5"  VerticalAlignment="Top" Content="Steps" HorizontalContentAlignment="Center" Grid.Column="0" Grid.RowSpan="2" />
-        <ListView Margin="5"  VerticalAlignment="Stretch" ItemsSource="{Binding ElementStepVMList}" HorizontalAlignment="Stretch" Background="AliceBlue" Grid.Column="0" Grid.Row="1" Grid.RowSpan="4">
+        <Label Margin="5"  VerticalAlignment="Top" Content="Steps" HorizontalContentAlignment="Center" Grid.Column="0" Grid.RowSpan="2" Grid.ColumnSpan="2" />
+        <ListView Name="StepListControl" Margin="5"  VerticalAlignment="Stretch" ItemsSource="{Binding ElementStepVMList}" HorizontalAlignment="Stretch" Background="AliceBlue" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="4" Grid.RowSpan="4">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="type" Width="100" DisplayMemberBinding="{Binding TypeDescription}"/>
                     <GridViewColumn Header="selector" Width="100" DisplayMemberBinding="{Binding SelectorDescription}"/>
                     <GridViewColumn Header="data" Width="100" DisplayMemberBinding="{Binding DataDescription}"/>
-                   
                 </GridView> 
             </ListView.View>
         </ListView>
-        <Button Grid.Row="5" Grid.Column="0" Margin="5" Content="Compile scritp" Name="RenderButton" Click="RenderButton_Click"/>
-        <Label Margin="5"  VerticalAlignment="Top" Grid.Row="2" Name="SelectorDescriptionLabel" HorizontalContentAlignment="Center" Grid.Column="1" Grid.ColumnSpan="1" Grid.RowSpan="1" />
-        <TextBox Grid.Row="2" Grid.Column="2"  Grid.ColumnSpan="2" Margin="8" Name="ElementName" Visibility="Hidden"/>
-        <Label Margin="5"  VerticalAlignment="Top" Name="ActionTypeLabel" Visibility="Hidden" Grid.Row="3" Content="Choose Action"  HorizontalContentAlignment="Center" Grid.Column="1" Grid.ColumnSpan="1" Grid.RowSpan="1" />
-        <ComboBox IsEnabled="True" Grid.Column="2"  Visibility="Hidden" IsVisibleChanged="ActionType_IsVisibleChanged" Grid.Row="3" SelectionChanged="ActionType_SelectionChanged" HorizontalAlignment="Stretch" Grid.ColumnSpan="2" Margin="5" VerticalAlignment="Top"  Name="ActionType"/>
-        <Label Margin="5"  VerticalAlignment="Top" Content="Element type" HorizontalContentAlignment="Center" Grid.Column="1" Grid.RowSpan="1" />
-        <Label Margin="5"  VerticalAlignment="Top" Content="Media type" HorizontalContentAlignment="Center" Grid.Column="2" Grid.RowSpan="1" />
-        <Label Margin="5"  VerticalAlignment="Top" Content="SelectorType" HorizontalContentAlignment="Center" Grid.Column="3" Grid.RowSpan="1" />
-        <ComboBox IsEnabled="True" Grid.Column="1" Grid.Row="1" SelectionChanged="ElementType_SelectionChanged" HorizontalAlignment="Stretch" Margin="5" VerticalAlignment="Top"  Name="ElementType"/>
-        <ComboBox IsEnabled="False" Grid.Column="2" Grid.Row="1" SelectionChanged="MediaType_SelectionChanged"  HorizontalAlignment="Stretch" Margin="5" VerticalAlignment="Top"  Name="MediaType"/>
-        <ComboBox IsEnabled="False" Grid.Column="3" Grid.Row="1" SelectionChanged="SelectorType_SelectionChanged"  HorizontalAlignment="Stretch" Margin="5" VerticalAlignment="Top" Name="SelectorType"/>
-        <Grid Grid.Row="4" Grid.RowSpan="2" Grid.Column="1" Grid.ColumnSpan="3" Margin="5" Name="ActionContent">
+        <Button Grid.Row="5" Grid.Column="0" Margin="5" Content="Up" Name="UpButton" Click="UpButton_Click"/>
+        <Button Grid.Row="5" Grid.Column="1" Margin="5" Content="Down" Name="DownButton" Click="DownButton_Click"/>
+        <Button Grid.Row="5" Grid.Column="2" Margin="5" Content="Compile scritp" Name="RenderButton" Click="RenderButton_Click"/>
+        <Button Grid.Row="5" Grid.Column="3" Margin="5" Content="Remove Selected" Name="RemoveButton" Click="RemoveButton_Click"/>
+        <Label Margin="5"  VerticalAlignment="Top" Grid.Row="2" Name="SelectorDescriptionLabel" HorizontalContentAlignment="Center" Grid.Column="4" Grid.ColumnSpan="1" Grid.RowSpan="1" />
+        <TextBox Grid.Row="2" Grid.Column="4"  Grid.ColumnSpan="2" Margin="8" Name="ElementName" Visibility="Hidden"/>
+        <Label Margin="5"  VerticalAlignment="Top" Name="ActionTypeLabel" Visibility="Hidden" Grid.Row="3" Content="Choose Action"  HorizontalContentAlignment="Center" Grid.Column="4" Grid.ColumnSpan="1" Grid.RowSpan="1" />
+        <ComboBox IsEnabled="True" Grid.Column="5"  Visibility="Hidden" IsVisibleChanged="ActionType_IsVisibleChanged" Grid.Row="3" SelectionChanged="ActionType_SelectionChanged" HorizontalAlignment="Stretch" Grid.ColumnSpan="2" Margin="5" VerticalAlignment="Top"  Name="ActionType"/>
+        <Label Margin="5"  VerticalAlignment="Top" Content="Element type" HorizontalContentAlignment="Center" Grid.Column="4" Grid.RowSpan="1" />
+        <Label Margin="5"  VerticalAlignment="Top" Content="Media type" HorizontalContentAlignment="Center" Grid.Column="5" Grid.RowSpan="1" />
+        <Label Margin="5"  VerticalAlignment="Top" Content="SelectorType" HorizontalContentAlignment="Center" Grid.Column="6" Grid.RowSpan="1" />
+        <ComboBox IsEnabled="True" Grid.Column="4" Grid.Row="1" SelectionChanged="ElementType_SelectionChanged" HorizontalAlignment="Stretch" Margin="5" VerticalAlignment="Top"  Name="ElementType"/>
+        <ComboBox IsEnabled="False" Grid.Column="5" Grid.Row="1" SelectionChanged="MediaType_SelectionChanged"  HorizontalAlignment="Stretch" Margin="5" VerticalAlignment="Top"  Name="MediaType"/>
+        <ComboBox IsEnabled="False" Grid.Column="6" Grid.Row="1" SelectionChanged="SelectorType_SelectionChanged"  HorizontalAlignment="Stretch" Margin="5" VerticalAlignment="Top" Name="SelectorType"/>
+        <Grid Grid.Row="4" Grid.RowSpan="2" Grid.Column="4" Grid.ColumnSpan="3" Margin="5" Name="ActionContent">
         </Grid>
     </Grid>
 </Window>
